fixed spacing and added deploy scripts for gh-pages

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,8 @@
   justify-content: center;
   align-items: center;
   margin-top: 1rem;
+  flex-wrap: wrap;
+  padding: 0 2rem;
 }
 
 
@@ -63,6 +65,7 @@
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 2rem;
+  padding: 2rem;
 }
 
 .error {
@@ -91,6 +94,7 @@
   background-color: var(--background);
   color: white;
   border: 2px solid white;
+  margin-bottom: 1rem;
 }
 
 .sortBtn:hover, .resetBtn:hover, .pcBtn:hover, .browserBtn:hover {
