--- a/src/Card.css
+++ b/src/Card.css
@@ -1,5 +1,5 @@
 .card {
-    width: 20rem;
+    max-width: 20rem;
     display: flex;
     flex-direction: column;
     background-color: var(--card-background);
